--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+giotto-tda
+gudhi
+ipython
+librosa
+matplotlib
+mdatagen
 numpy
-pandas
 openml
+pandas
+persim
 scikit-learn
+scipy
+seaborn
+statsmodels
 tabulate
 tadasets
-librosa
-mdatagen
-statsmodels
-giotto-tda
-persim
